--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "redis": "^4.6.14"
   }
 }
